# arden-lang

./: .gitignore  CHANGELOG.md  CHANGELOGS.md  CONTRIBUTING.md  Cargo.toml  LANGUAGE_COMPARISON.md  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.cargo/linkers/: linux-aarch64-mold.sh  linux-x86_64-mold.sh  macos-aarch64-lld.sh  macos-x86_64-lld.sh
.github/: AUTOMATION.md  README.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  indexnow.yml  linker-benchmarks.yml  portable-install-smoke.yml  release.yml
benchmark/: PERFORMANCE_GUIDE.md  README.md  full_campaign.py  run.py
benchmark/arden/: collatz_batch.arden  convolution_1d.arden  fibonacci_recursive.arden  histogram_heavy.arden  matrix_mul.arden  matrix_mul_heavy.arden  prefix_sum_stream.arden  prime_count.arden  scatter_gather_mix.arden  sort_heavy.arden  stencil_2d.arden  sum_loop.arden
benchmark/benchmark_runner/: campaign.py  cli.py  execution.py  jobs.py  mutations.py  project_small.py  project_synthetic.py  reporting.py  specs.py  synthetic_arden.py  synthetic_go.py  synthetic_rust.py  synthetic_shared.py  system.py  timings.py  types.py
benchmark/go/: collatz_batch.go  convolution_1d.go  fibonacci_recursive.go  histogram_heavy.go  matrix_mul_heavy.go  prefix_sum_stream.go  scatter_gather_mix.go  (+2 more)
docs/: overview.md  projects.md
examples/: 01_hello.arden  02_variables.arden  03_math.arden  05_classes.apex  06_enums.arden  07_interfaces.arden  08_modules.arden  10_ownership.arden  11_lambdas.arden  12_string_interp.apex  12_string_interp.arden  17_comprehensive.apex  19_time.arden  20_system.arden  22_args.apex  24_test_attributes.apex  24_test_attributes.arden  24_testing.apex  25_range_types.apex  25_result_type.apex  26_iterator_pattern.apex  27_design_patterns.apex  28_async_runtime_control.arden  28_memory_management.apex  29_advanced_pattern_matching.apex  30_extern_variadic_printf.arden  31_extern_abi_link_name.arden  33_extern_ptr_types.arden  34_bindgen_workflow.apex  34_bindgen_workflow.arden  35_visibility_enforcement.apex  37_interfaces_contracts.arden  39_compound_assign.apex  40_borrow_scope_recovery.apex  README.md  app_bank.apex  app_bank.arden  app_calculator.apex  app_calculator.arden  app_data_structures.apex  (+8 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer_parser.rs
scripts/: README.md  ci_cli_smoke.sh  ci_cli_smoke_windows.ps1  cli_smoke.sh  cli_smoke_windows.ps1  examples_smoke.bat  examples_smoke_linux.sh  examples_smoke_macos.sh  extract_modules.py  fix_all.py  fix_visibility.py  test_examples.bat  test_examples_linux.sh  test_examples_macos.sh
src/: ast.rs  bindgen.rs  borrowck.rs  codegen.rs  formatter.rs  import_check.rs  lexer.rs  lint.rs  lsp.rs  main.rs  namespace.rs  parser.rs  process_exit.rs  project.rs  project_rewrite.rs  stdlib.rs  test_runner.rs  typeck.rs
web/: index.html  lighthouse-mobile.json  lighthouse-prod-mobile.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
(+509 files in other folders)
