[package]
name = "apex-compiler"
version = "1.3.5"
edition = "2021"
authors = ["TheRemyyy"]
description = "Apex Programming Language Compiler"

[dependencies]
# LLVM 21 bindings
inkwell = { git = "https://github.com/TheDan64/inkwell.git", default-features = false, features = ["llvm21-1", "target-x86"] }

# Lexer
logos = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Colored output
colored = "2"

# Project configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.10"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = { version = "1.49.0", features = ["full"] }
twox-hash = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
