[package]
name = "arden"
version = "1.3.8"
edition = "2021"
authors = ["TheRemyyy"]
description = "Arden systems programming language compiler"

[dependencies]
# LLVM 22 bindings
inkwell = { git = "https://github.com/TheDan64/inkwell.git", rev = "832a4487ee4010a957f5143c7d92242d2ffa22a5", default-features = false, features = ["llvm22-1", "target-x86"] }

# Lexer
logos = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Colored output
colored = "2"
enable-ansi-support = "0.2"

# Project configuration
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "3.0"
rayon = "1.10"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = { version = "1.52.0", features = ["full"] }
twox-hash = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
