[package]
name = "arden-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "lexer_parser"
path = "fuzz_targets/lexer_parser.rs"
test = false
doc = false
bench = false
